[tool.poetry]
name = "cti-scraper"
version = "0.1.0"
description = "CTI Scraper - Threat Intelligence Aggregation and Analysis Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
jinja2 = "^3.1.3"
python-multipart = "^0.0.6"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"

# AWS SDK
boto3 = "^1.34.0"
botocore = "^1.34.0"

# Web Scraping
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"

# ML and NLP
scikit-learn = "^1.4.0"
numpy = "^1.26.3"
joblib = "^1.3.2"

# LangGraph and LangChain
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-aws = "^0.1.0"

# Langfuse for observability
langfuse = "^2.20.0"

# Utilities
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
